# DT2112

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
data/: celeb_data_with_wiki.csv  celebs_dev.csv  dev.csv  test.csv  vox2_meta.csv
data/filtered_celebs_data/celebs_200_9_clips/: metadata.json  vector_store.index
demo/: app.py
demo/static/: script.js  style.css
demo/templates/: index.html
notebooks/: celeb_ranking.ipynb  filter_celeb_data.ipynb  load_data.ipynb  thresholds.ipynb  top200_celebs.ipynb
src/demo/: app.py
src/demo/static/: script.js  style.css
src/demo/templates/: index.html
src/kth_sr/: __init__.py  embeddings.py  loaddata.py  mfcc.py  utils.py  vectorstore.py
src/kth_sr/embeddings/: __init__.py  model.py  strategies.py
tests/: test_vectorstore.py
tests/embeddings/: test_strategies.py
