[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "KTH_SR"
description = "This is a project for the course DT2112 Speech processing at KTH."
version = "0.1"
requires-python = ">=3.9, <3.12"
dependencies = [
    "plotnine",
    "scipy",
    "numpy<2",
    "pandas",
    "yt-dlp",
    "pydub",
    # embedding model
    "deep-speaker @ git+https://github.com/philipperemy/deep-speaker.git@master#egg=deep-speaker",
    "tensorflow==2.14.0",
    "gdown",
    "faiss-cpu",
    # Demo
    "flask",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "click",
    "black[jupyter]",
    "nbconvert",
    "ruff",
    "pre-commit",
    "pytest",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.isort]
known-local-folder = ["KTH_SR"]